--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-vllm==0.6.2
-torch>=2.0.1
+torch==2.3.1
 transformers>=4.39.0
 tqdm>=4.65.0
+accelerate>=0.26.0
 huggingface_hub
-einops
-accelerate
-tiktoken
-ninja
+tenacity
