--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "xfinder"
-version = "0.2.3"
+version = "0.2.4"
 dependencies = [
   "torch==2.3.1",
   "transformers>=4.39.0",
